@@ -1,3 +1,7 @@
+2005-08-15  Tim Jenness  <tjenness@cpan.org>
+
+	* Makefile.PL: No longer need fortran library in link
+
 2000-04-03  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* NBS.xs: Change na to PL_na
